# QuantumOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  auto_up.sh  build.rs  ipc.schema  macro_plan.md  progress-report.md  rust-toolchain.toml  tmp_build.sh  todo_list.txt  visualize.sh
Meta/: Cargo.toml
Meta/src/: artifacts.rs  config_generator.rs  disk_builder.rs  emulator_spawner.rs  filesystem_constructor.rs  lib.rs  main.rs
bootloader/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
bootloader/.cargo/: config.toml
bootloader/bootloader/: .gitignore  Cargo.toml
bootloader/bootloader/src/: E820_memory.rs  bios_call.rs  boot_info.rs  e820_memory.rs  error.rs  lib.rs
bootloader/linkerscripts/: common.ld  i386-quantum_bootsector.ld  i386-quantum_loader.json  i386-quantum_loader.ld  i686-quantum_loader.json  i686-quantum_loader.ld  x86-64-quantum_loader.json
bootloader/src/: lib.rs
bootloader/src/bios_boot/stage-1/: CMakeLists.txt  Cargo.toml  build.rs  i386-quantum_loader.json  linker.ld
bootloader/src/bios_boot/stage-1/.cargo/: config.toml
bootloader/src/bios_boot/stage-1/src/: bios_disk.rs  bios_ints.rs  bios_video.rs  bootloader_stack_information.rs  config_parser.rs  console.rs  cpu_regs.rs  cstring.rs  error.rs  fat.rs  init.s  lib.rs  main.rs  mbr.rs  memory_detection.rs  memory_map.rs  tmp_alloc.rs  (+2 more)
bootloader/src/bios_boot/stage-2/: Cargo.toml  build.rs  linker.ld
bootloader/src/bios_boot/stage-3/: .gitignore  Cargo.toml  linker.ld  x86_64-quantum_loader.json
bootloader/src/uefi_boot/: .gitignore  Cargo.toml
bootloader/stage-16bit/: Cargo.toml  build.rs
bootloader/stage-16bit/.cargo/: config.toml
bootloader/stage-16bit/src/: bump_alloc.rs  config.rs  console.rs  disk.rs  error.rs  io.rs  main.rs  mbr.rs  memory.rs  panic.rs  unreal.rs
bootloader/stage-16bit/src/fatfs/: bpb.rs  inode.rs  mod.rs
bootloader/stage-32bit/: Cargo.toml  build.rs
bootloader/stage-32bit/src/: main.rs  multiboot.rs  paging.rs  panic.rs
bootloader/stage-64bit/: Cargo.toml  build.rs
bootloader/stage-64bit/src/: main.rs  paging.rs  panic.rs
bootloader/stage-bootsector/: Cargo.toml  build.rs
bootloader/stage-bootsector/src/: disk.rs  init.s  main.rs  partition.rs  tiny_panic.rs
crates/hw-macro/: Cargo.toml
crates/hw-macro/src/: hw_gen.rs  hw_parse.rs  lib.rs  macro_gen.rs  make_hw_parse.rs  provider_parse.rs
crates/kinases/: Cargo.toml
crates/kinases/benches/: mutex_benchmark.rs
crates/kinases/src/: atomic_arc.rs  atomic_list.rs  atomic_option.rs  lib.rs  linkedlist.rs  nonblocking.rs  spin.rs  sync.rs  wake.rs
crates/kinases/src/nonblocking/: semaphore.rs
crates/kinases/src/spin/: mutex.rs
crates/kinases/src/sync/: mutex.rs  semaphore.rs
crates/lldebug-macro/: Cargo.toml
crates/lldebug-macro/src/: generate.rs  lib.rs  parse.rs
crates/lldebug-macro/tests/: tests.rs
crates/lldebug-macro/tests/one/: one.rs
crates/lldebug-macro/tests/two/: two.rs
crates/mem/: Cargo.toml
crates/mem/benches/: pmm_benchmark.rs
crates/mem/src/: addr.rs  alloc.rs  lib.rs  page.rs  paging.rs  phys.rs  pmm.rs  virt2phys.rs  vm.rs  vmm.rs
crates/mem/src/pmm/: backing.rs
crates/mem/src/vmm/: backing.rs  page.rs
crates/portal/: Cargo.toml
crates/portal-macro/: Cargo.toml
crates/portal-macro/src/: ast.rs  lib.rs  parse.rs  portal_parse.rs  rust_builder.rs  type_serde.rs
crates/portal/src/: ipc.rs  lib.rs  syscall.rs
crates/portal/src/ipc/: convert.rs
kernel/: .gitignore  Cargo.toml  README.md  build.rs  linker.ld  rust-toolchain.toml  x86-64-quantum_kernel.json  x86-64-quantum_kernel.ld  x86-64-vera_kernel.json  x86-64-vera_kernel.ld  x86_64-quantum_os.json
kernel/.cargo/: config.toml
kernel/src/: apic.rs  context.rs  debug_output.rs  enum_iterator.rs  gdt.rs  hex_dump.rs  idt.rs  int.rs  interrupts.rs  kernel_console.rs  keyboard.rs  lib.rs  locks.rs  main.rs  panic.rs  pic.rs  process.rs  processor.rs  ps2.rs  qemu.rs  scheduler.rs  serial.rs  syscall_handler.rs  test_handler.rs  timer.rs
kernel/src/arch_x86_64/: cpuid.rs  idt.rs  mod.rs
kernel/src/ata/: identify_parser.rs  mod.rs  registers.rs
kernel/src/clock/: mod.rs  rtc.rs
kernel/src/filesystem/: impl_disk.rs  mod.rs
kernel/src/filesystem/partitioning/: mbr.rs  mod.rs
kernel/src/locks/: critical_lock.rs  schedule_lock.rs  thread_cell.rs  yield_lock.rs
kernel/src/memory/: init_alloc.rs  mod.rs
kernel/src/memory/paging/: page_flags.rs  page_tables.rs
kernel/src/memory_utils/: mod.rs  safe_ptr.rs
kernel/src/process/: scheduler.rs  task.rs  thread.rs  vm_elf.rs
kernel/src/ps2/: mod.rs  registers.rs
kernel/src/vfs/: impl_disk.rs  io.rs  mod.rs
kernel/src/vfs/ata/: identify_parser.rs  mod.rs  registers.rs
kernel/src/vfs/filesystem/: mod.rs
kernel/src/vfs/partitioning/: mbr.rs  mod.rs
kernel/src/vga/low_level/: mod.rs
lib/fs/: .gitignore  Cargo.toml
lib/fs/fs/: Cargo.toml
lib/fs/src/: abstract_buffer.rs  backed_buffer.rs  error.rs  fs.rs  lib.rs  node.rs  path.rs  permission.rs
lib/fs/src/dir/: dd.rs  mod.rs
lib/fs/src/disks/: cache.rs  mod.rs
lib/fs/src/file/: fd.rs  mod.rs
lib/fs/src/filesystems/: mod.rs
lib/fs/src/io/: info.rs  mod.rs  traits.rs
lib/fs/src/partition/: mbr.rs  mod.rs
meta/: Cargo.toml
meta/src/: artifacts.rs  cmdline.rs  disk.rs  main.rs
portals/fs-portal/: Cargo.toml
portals/fs-portal/src/: lib.rs
quantum_boot/src/bios_boot/: .gitignore  CMakeLists.txt  disk.asm  gdt.asm  linker.ld  mbr.asm  protected.asm  runc.asm  start.c
quantum_boot/src/bios_boot/bios/: Cargo.toml
quantum_boot/src/bios_boot/bios_abstraction/: Cargo.toml
quantum_boot/src/bios_boot/stage-1/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  build_rust.sh  linker.ld  x86_64-quantum_os.json
quantum_boot/src/bios_boot/stage-2/: Cargo.toml
user/aloe/: Cargo.toml  LICENSE-MIT
user/aloe/src/: alloc.rs  debug.rs  ipc.rs  lib.rs  uio.rs
user/dummy/: Cargo.toml  build.rs
user/dummy/src/: main.rs
user/hello-server/: Cargo.toml
user/hello-server/src/: main.rs
(+477 files in other folders)
