[workspace]
members = [
  "kernel",
  "meta", 
  "bootloader", 
  "bootloader/stage-bootsector", 
  "bootloader/stage-16bit",
  "bootloader/stage-32bit", 
  "bootloader/stage-64bit", 
  "crates/bios", 
  "crates/arch", 
  "crates/fs", 
  "crates/bits", 
  "crates/binfont",
  "crates/bootgfx", 
  "crates/lignan", 
  "crates/serial", 
  "crates/lignan-macro", 
  "crates/bits-macro", 
  "crates/util", 
  "crates/elf", 
  "crates/mem",
  "crates/arch-macro",
  "crates/boolvec",
  "user/dummy",
  "user/aloe",
  "crates/tar",
  "user/hello-server",
  "crates/portal-macro",
  "crates/portal",
  "portals/hello-portal",
  "portals/vera-portal",
  "user/libsys",
  "user/fs-server",
  "portals/fs-portal",
  "crates/chloroplast",
  "crates/kinases"
]

default-members = ["meta"]
resolver = "3"

[workspace.package]
version = "0.2.0"
authors = ["corigan01 <corigan01@gmail.com>"]
description = "AloeVera Operating System"
documentation = "https://github.com/corigan01/QuantumOS"
license = "MIT"

[workspace.dependencies]
arch = { path = "crates/arch" }
arch-macro = { path = "crates/arch-macro" }
bios = { path = "crates/bios" }
fs = { path = "crates/fs" }
bits = { path = "crates/bits" }
bootloader = { path = "bootloader/" }
binfont = { path = "crates/binfont" }
bootgfx = { path = "crates/bootgfx" }
serial = { path = "crates/serial" }
lignan = { path = "crates/lignan" }
lignan-macro = { path = "crates/lignan-macro" }
bits-macro = { path = "crates/bits-macro" }
util = { path = "crates/util" }
elf = { path = "crates/elf" }
mem = { path = "crates/mem" }
boolvec = { path = "crates/boolvec" }
aloe = { path = "user/aloe" }
tar = { path = "crates/tar" }
portal = { path = "crates/portal" }
portal-macro = { path = "crates/portal-macro" }
hello-portal = { path = "portals/hello-portal" }
vera-portal = { path = "portals/vera-portal" }
libsys = { path = "user/libsys" }
fs-portal = { path = "portals/fs-portal" }
chloroplast = { path = "crates/chloroplast" }
kinases = { path = "crates/kinases" }
vera = { path = "kernel/" }

[profile.stage-bootsector]
inherits = "release"
panic = "abort"
opt-level="z"
strip = false
lto = true
codegen-units = 1
debug = 0
overflow-checks = false

[profile.stage-16bit]
inherits = "release"
panic = "abort"
opt-level="z"
strip = false
lto = true
codegen-units = 1
debug = 0
overflow-checks = false

[profile.stage-32bit]
inherits = "release"
panic = "abort"
opt-level="z"
strip = false
lto = true
debug = 0
overflow-checks = true

[profile.stage-64bit]
inherits = "release"
panic = "abort"
opt-level="z"
strip = false
lto = true
debug = 0
overflow-checks = true

[profile.vera-dev]
inherits = "dev"
panic = "abort"
opt-level=0
strip = false
debug = 1
overflow-checks = true

[profile.vera]
inherits = "release"
panic = "abort"
opt-level = 1
strip = false
debug = 1
overflow-checks = true

[profile.userspace]
inherits = "release"
panic = "abort"
opt-level = 1
strip = false
debug = 1
overflow-checks = true
