[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
bootloader = { workspace = true }
lldebug = { workspace = true }
serial = { workspace = true }
util = {workspace = true}
mem = {workspace = true, features = ["alloc"]}
arch = {workspace = true}
elf = {workspace = true, features = ["alloc"]}
tar = { workspace = true }
boolvec = {workspace = true}
quantum-portal = {workspace = true, features = ["server"]}
