[package]
name = "vera"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
bootloader = { workspace = true }
lignan = { workspace = true }
serial = { workspace = true }
util = {workspace = true}
mem = {workspace = true, features = ["alloc"]}
arch = {workspace = true}
elf = {workspace = true, features = ["alloc"]}
tar = { workspace = true }
boolvec = {workspace = true}
vera-portal = {workspace = true, features = ["server"]}
bits = {workspace = true}
chloroplast = {workspace = true}
