[package]
name = "meta-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
mbrman = "0.5.2"
fatfs = "0.3.6"
anyhow = "1.0.81"
futures = "0.3.30"
async-process = "2.1.0"
