[package]
name = "stage-32bit"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
bootloader = {workspace = true}
bootgfx = {workspace = true}
serial = {workspace = true}
lldebug = {workspace = true}
arch = {workspace = true}
