[package]
name = "lldebug-macro"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0.0"

[dev-dependencies]
trybuild = "1.0"
