[package]
name = "mem"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
lldebug = {workspace = true}
util = {workspace = true}
boolvec = {workspace = true, optional = true}
arch = {workspace = true}
hw = {workspace = true}

[features]
alloc = ["dep:boolvec"]
default = []
