[package]
name = "portal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
portal-macro = { workspace = true }
libsys = { workspace = true, optional = true }

[features]
default = ["client"]
client = ["dep:libsys", "portal-macro/client"]
server = ["portal-macro/server"]
