[package]
name = "portal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
portal-macro = { workspace = true }
libsys = { workspace = true, optional = true }
lldebug = { workspace = true }

[features]
default = ["client"]
alloc = []
client = ["dep:libsys", "portal-macro/client"]
server = ["portal-macro/server"]
