[package]
name = "portal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
portal-macro = { workspace = true }
libsys = { workspace = true, optional = true }
lldebug = { workspace = true }

[features]
default = []
syscall-client = ["dep:libsys", "portal-macro/syscall-client"]
syscall-server = ["portal-macro/syscall-server"]
ipc-client = ["portal-macro/ipc-client"]
ipc-server = ["portal-macro/ipc-server"]
