[package]
name = "fs"
version = "0.1.0"
edition = "2021"
authors = ["Main Menu"]
categories = ["Filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum_lib = {path = "../lowlevel_lib" }
qk_alloc = { path = "../alloc" }
quantum_utils = { path = "../quantum_utils" }