[package]
name = "fs-portal"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
portal = {workspace = true}

[features]
default = ["client", "server"]
client = ["portal/ipc-client"]
server = ["portal/ipc-server"]
