[package]
name = "aloe"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
vera-portal = {workspace = true, features = ["client"]}
lignan = {workspace = true}
portal = {workspace = true, features = ["ipc-client", "ipc-server"]}
