[package]
name = "dummy"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
aloe = { workspace = true }
portal = { workspace = true, features = ["ipc-client"] }
hello-portal = { workspace = true, features = ["client"] }
fs-portal = { workspace = true, features = ["client"] }
