[package]
name = "hello-server"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
libq = { workspace = true }
hello-portal = { workspace = true, features = ["server"]}
portal = { workspace = true, features = ["ipc-server"] }
