[package]
name = "stage-1"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
no-std-compat = "0.4.1"
volatile = "0.4.5"
spin = "0.9.4"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.release]
lto = true
codegen-units = 1
debug = false
overflow-checks = false
