[package]
name = "stage-2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
quantum_lib = { path = "../../../../lib/lowlevel_lib" }
bootloader = { path = "../../../bootloader" }
spin = "0.9.8"
quantum_utils = { path = "../../../../lib/quantum_utils" }


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]